new base for coding added
added a new base for new coding, it needs correction

--- a/translations/es/LC_MESSAGES/messages.po
+++ b/translations/es/LC_MESSAGES/messages.po
@@ -98,3 +98,12 @@ msgstr "Situación"
 
 msgid "Registrar"
 msgstr "Registrar"
+
+msgid "Próxima"
+msgstr "Siguiente"
+
+msgid "Anterior"
+msgstr "Anterior"
+
+msgid "Página"
+msgstr "Página"
