--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -107,3 +107,15 @@ msgstr "Status"
 
 msgid "Registrar"
 msgstr "Register"
+
+msgid "Próxima"
+msgstr "Next"
+
+msgid "Anterior"
+msgstr "Previous"
+
+msgid "Página"
+msgstr "Page"
+
+msgid "de"
+msgstr "of"
